// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkHorizontalNavSelectedIndicator dark mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(109, 159, 235)",
      "height": 2,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;

exports[`Android BpkHorizontalNavSelectedIndicator dark mode should support custom styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(255, 255, 255)",
      "height": 2,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;

exports[`Android BpkHorizontalNavSelectedIndicator light mode should render correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(7, 112, 227)",
      "height": 2,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;

exports[`Android BpkHorizontalNavSelectedIndicator light mode should support custom styles 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgb(255, 255, 255)",
      "height": 2,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;

exports[`Android BpkHorizontalNavSelectedIndicator should support theming 1`] = `
<View
  style={
    Object {
      "backgroundColor": "red",
      "height": 2,
      "transform": Array [
        Object {
          "translateX": 0,
        },
      ],
      "width": 100,
    }
  }
/>
`;
